--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://arghya-align-pix-design.github.io/Fragrance/",
+  "homepage": "https://arghya-align-pix-design.github.io/Fragrance",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
